<resources>
    <string name="app_name">Click2Cover LMS</string>
    <string name="prompt">Choose a Status</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Appointment</string>
    <string name="nav_movies">Follow Up</string>
    <string name="nav_notifications">Reminders</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_normal_lead">Leads</string>
    <string name="nav_appointment_lead">Appointments</string>
    <string name="nav_appointment_reminder">Reminders</string>
    <string name="nav_about_us">About Us</string>

    <string-array name="nav_item_activity_titles">
        <item>Lead Managment System</item>
        <item>Leads</item>
        <item>Appointments</item>
    </string-array>

    <string-array name="array_ad_type">
        <item>Office Address</item>
        <item>Residential Address</item>
    </string-array>
    <string-array name="array_ad_type_id">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


    <string name="str_cnt_mnu_edit">Edit</string>
    <string name="str_cnt_mnu_delete">Delete</string>
</resources>
