<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_normal_lead"
            android:icon="@drawable/ic_leads"
            android:title="@string/nav_normal_lead" />
        <item
            android:id="@+id/nav_appointment_lead"
            android:icon="@drawable/ic_appoint"
            android:title="@string/nav_appointment_lead" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_reminder"
            android:title="@string/nav_appointment_reminder" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>